# local-recall-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: budget-csv.yaml  claude-code.yaml  obsidian.yaml
src/local_recall_mcp/: __init__.py  csv_source.py  indexer.py  server.py
tests/: test_csv_source.py  test_indexer.py  test_server.py
