[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-recall-mcp"
version = "0.1.0"
description = "Fully local semantic memory for AI agents: search your notes and session logs from any MCP client, with embeddings served by Ollama"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Chikoku-NEKO" }]
keywords = ["mcp", "memory", "semantic-search", "ollama", "local-first", "agent", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.scripts]
local-recall-mcp = "local_recall_mcp.server:cli"

[project.urls]
Homepage = "https://github.com/Chikoku-NEKO/local-recall-mcp"
Issues = "https://github.com/Chikoku-NEKO/local-recall-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/local_recall_mcp"]
